--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello This is chandrika's web server. welcome!!
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
