--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Welcome to chandrika's web page!!!</h1>
+<p>How was your day???</p>
 
 </body>
 </html>
